--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <properties>
+        <!-- The main class to start by executing java -jar -->
+        <start-class>API.Main</start-class>
+    </properties>
+
 
     <build>
         <plugins>
